--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -35,12 +37,11 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-av": "~14.0.7",
-    "expo-image-picker": "~15.0.7"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
